# containment-checking-starter

./: README.md
.github/workflows/: build.yml
config/: gatorgrade.yml
containmentcheck/: pyproject.toml
containmentcheck/containmentcheck/: main.py
writing/: reflection.md
